fixes, ajust timers, gap in loading screen, remove blank images

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -14,10 +14,13 @@ $dark-background: #212529;
 .logo-overlay-loader {
     width: 100%;
     height: 100%;
-    position: absolute;
     background: $dark-background;
     z-index: 999999;
     position: fixed;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     img {
         width: 96px;
         height: 96px;
